--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
     </head>
     <body>
 
+        <div class="caribe-navegacion d-none">
+            <div class="container">
+                <div class="row d-lg-flex align-items-center">
+                    <div class="col-lg-4 col-6">
+                        <img class="caribe-logotipo" src="img/logo-caribe-nut.svg">
+                    </div>
+                    <div class="col-md-8 col-6">
+                        <ul class="caribe-navegacion-enlaces">
+                            <li><a href="#"><img src="img/mx.png" alt="Cambiar a Inglés"></a></li>
+                            <li><a href="#"><img src="img/whatsapp.png" alt="WhatsApp"></a></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="caribe-motor">
+            <div class="container">
+                <div class="row d-lg-flex align-items-center py-5">
+                    <div class="col-lg-4 col-6">
+                        <img class="caribe-logotipo" src="img/logo-caribe-nut.svg">
+                    </div>
+                    <div class="col-md-8 col-6">
+                        <ul class="caribe-navegacion-enlaces">
+                            <li><a href="#"><img src="img/mx.png" alt="Cambiar a Inglés"></a></li>
+                            <li><a href="#"><img src="img/whatsapp.png" alt="WhatsApp"></a></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="row mb-5">
+                    <div class="col-12">
+                        <h2 class="mb-2">Experiencias únicas</h2>
+                        <p>Conoce el lugar que quieras sin prisas y a tu ritmo</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="caribe-experiencias">
             <div class="container">
                 <div class="row mb-5">
@@ -207,7 +245,7 @@
             </div>
         </div>
         
-        <div class="space-contacto py-4">
+        <div class="caribe-contacto py-4">
             <div class="container">
                 <div class="row d-lg-flex align-items-lg-center">
                     <div class="col-lg-4 col-12">
@@ -219,7 +257,7 @@
                         <p>Tel: 984 278 4730<br>reservaciones@transferscaribenut.com</p>
                     </div>
                     <div class="col-lg-4 col-12">
-                        <ul class="space-contacto-social">
+                        <ul class="caribe-contacto-social">
                             <li><a href="#"><img src="img/Facebook.png" alt="Facebook"></a></li>
                             <li><a href="#"><img src="img/instagram.png" alt="Facebook"></a></a></li>
                             <li><a href="#"><img src="img/tiktok.png" alt="Facebook"></a></a></li>
