--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <div class="row d-lg-flex align-items-center py-5">
                     <div class="col-lg-4 col-6">
-                        <img class="caribe-logotipo" src="img/logo-caribe-nut.svg">
+                        <img class="caribe-logotipo" src="img/logo-caribe-nut-claro.svg">
                     </div>
                     <div class="col-md-8 col-6">
                         <ul class="caribe-navegacion-enlaces">
